# private-assistant-curtain-skill-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Containerfile  README.md  pyproject.toml  template.yaml
.devcontainer/: Containerfile  compose.yml  devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  python_code_quality.yml
integration/: __init__.py
src/private_assistant_curtain_skill/: __init__.py  config.py  curtain_skill.py  extract_from_text.py  main.py  models.py
src/private_assistant_curtain_skill/templates/: __init__.py  help.j2  set_curtain.j2  state.j2
tests/: test_config.py  test_curtain_skill.py  test_integration.py  test_models.py  test_templates.py
