[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "private-assistant-curtain-skill"
version = "0.2.0"
description = "Curtain Control Skill for Private Assistant: Enables automated and voice-activated curtain control within smart home environments."
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
private-assistant-commons = "^0.1.6"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
mypy = "^1.11.2"
pytest = "^8.3.2"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.scripts]
private-assistant-curtain-skill = "private_assistant_curtain_skill.main:app"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
